Add info and quote section

--- a/index.html
+++ b/index.html
@@ -36,5 +36,59 @@
         alt="Photo by Q. Hưng Phạm: https://www.pexels.com/photo/romantic-couple-in-ha-giang-flower-fields-29863314/"
       />
     </div>
+    <div class="info">
+      <p class="info-text">What you might get:</p>
+      <div class="pictures">
+        <div>
+          <img
+            src="img/picture_1.jpg"
+            alt="Photo by Mwabonje Ringa: https://www.pexels.com/photo/beautiful-woman-smiling-for-a-photo-1820559/"
+            height="200px"
+          />
+          <div>
+            Portraits that celebrate personality, energy, and the spontaneous
+            spark that makes you uniquely you.
+          </div>
+        </div>
+        <div>
+          <img
+            src="img/picture_2.jpg"
+            alt="Photo by Sornbhakkanut Boonprasop: https://www.pexels.com/photo/silver-tabby-cat-besides-person-s-arm-2646483/"
+            height="200px"
+          />
+          <div>
+            Warmth, comfort, and quiet connection, beautifully preserved so you
+            can return to the feeling anytime.
+          </div>
+        </div>
+        <div>
+          <img
+            src="img/picture_3.jpg"
+            alt="Photo by Nuwan chamara: https://www.pexels.com/photo/people-riding-boats-3087240/"
+            height="200px"
+          />
+          <div>
+            Breathtaking landscapes and travel memories, captured with depth,
+            color, and atmosphere that take you right back there.
+          </div>
+        </div>
+        <div>
+          <img
+            src="img/picture_4.jpg"
+            alt="Photo by Darya Sannikova: https://www.pexels.com/photo/woman-s-face-2992517/"
+          />
+          <div>
+            Creative and expressive portrait work, where light, color, and mood
+            blend into something truly personal.
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="quote-section">
+      <div class="quote">
+        You don't take a photograph, you make it.
+        <div class="quote-author">-Ansel Adams</div>
+      </div>
+    </div>
   </body>
 </html>
