Add cta and footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           Some moments deserve more than fading memories. I capture them so you
           can relive them forever.
         </div>
-        <button class="cta">Schedule your shoot</button>
+        <button class="cta button">Schedule your shoot</button>
       </div>
       <img
         src="img/hero_picture.jpg"
@@ -90,5 +90,15 @@
         <div class="quote-author">-Ansel Adams</div>
       </div>
     </div>
+    <div class="cta box">
+      <div>
+        <div class="cta-header">Stay in tune</div>
+        <div class="cta-subtext">
+          Want to receive all my latest work directly in your inbox? Sign up!
+        </div>
+      </div>
+      <button class="cta button button-inside-cta">Sign up</button>
+    </div>
+    <div class="footer">Copyright © James Photography 2025</div>
   </body>
 </html>
